...

final class EditableAccountSettingsViewModel {

    // Helper to carry the user input ot its validation.
    private typealias Input = (userName: String,
                               emailAddress: String,
                               password: String?,
                               imapServer: String,
                               imapPort: String,
                               imapTranportSecurity: String,
                               imapUsername: String,
                               smtpServer: String,
                               smtpPort: String,
                               smtpTranportSecurity: String,
                               smtpUsername: String)

    /// Indicates if the account is OAuth2
    public private(set) var isOAuth2: Bool = false

...
            throw AccountSettingsUserInputError.invalidInputServer(localizedMessage: msg)
        }
        guard let imapPort = rowValue(sectionType: .imap, rowType: .port) else {
            let msg = NSLocalizedString("IMAP Port must not be empty.", comment: "Empty IMAP port server message")
            throw AccountSettingsUserInputError.invalidInputPort(localizedMessage: msg)
        }
        guard let imapTransportSecurity = rowValue(sectionType: .imap, rowType: .tranportSecurity) else {
            let msg = NSLocalizedString("Choose IMAP transport security method.", comment: "Empty IMAP transport security method")
            throw AccountSettingsUserInputError.invalidInputTransport(localizedMessage: msg)
        }
        guard let imapUsername = rowValue(sectionType: .imap, rowType: .username) else {
            let msg = NSLocalizedString("Choose IMAP username.", comment: "Empty IMAP username")
            throw AccountSettingsUserInputError.invalidInputTransport(localizedMessage: msg)
...
            throw AccountSettingsUserInputError.invalidInputServer(localizedMessage: msg)
        }
        guard let smtpPort = rowValue(sectionType: .smtp, rowType: .port) else {
            let msg = NSLocalizedString("SMTP Port must not be empty.", comment: "Empty SMTP port server message")
            throw AccountSettingsUserInputError.invalidInputPort(localizedMessage: msg)
        }
        guard let smtpTransportSecurity = rowValue(sectionType: .smtp, rowType: .tranportSecurity) else {
            let msg = NSLocalizedString("Choose SMTP transport security method.", comment: "Empty SMTP transport security method")
            throw AccountSettingsUserInputError.invalidInputTransport(localizedMessage: msg)
        }
        guard let smtpUsername = rowValue(sectionType: .smtp, rowType: .username) else {
            let msg = NSLocalizedString("Choose SMTP username.", comment: "Empty IMAP transport security method")
            throw AccountSettingsUserInputError.invalidInputTransport(localizedMessage: msg)
...
