...
// MARK: - Private

extension TutorialWizardViewController {
    private func setUpView() {
        topBar.backgroundColor = .pEpGreen

        let skipButtonTitle = NSLocalizedString("Skip", comment: "Start up tutorial skip button")
        skipeButton.setTitle(skipButtonTitle, for: .normal)
        skipeButton.setTitleColor(.white, for: .normal)

        addPEPPageViewCotnroller()
    }

...
